--- a/src/app/features/user-list/user-list.component.html
+++ b/src/app/features/user-list/user-list.component.html
@@ -1,6 +1,16 @@
-<p class="table-title">Users list</p>
+<p class="table-title">Explore new friends</p>
+<hr class="divider">
 
-<cc-data-grid
-    [inputHeaderConfig]="headerConfig"
-    [inputDataSource]="usersCollection"
-/>
+<div class="users-list">
+    @if (usersCollection.length === 0) {
+    <p>No data to show</p>
+    }
+    @for (user of usersCollection; track user) {
+    <div class="user-item">
+        <p>{{user.username}}</p>
+        <button (click)="addFriend(user.id)" class="add-friend-btn">
+            <i class="fa-solid fa-user-plus"></i>
+        </button>
+    </div>
+    }
+</div>
