--- a/src/app/features/user-list/user-list.component.scss
+++ b/src/app/features/user-list/user-list.component.scss
@@ -1,6 +1,35 @@
 .table-title {
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 22px;
+    line-height: 30px;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
+}
+
+.divider {
+    background-color: #E0E0E0;
+    height: 1.5px;
+    border: 0;
+    margin: 4px 0;
+}
+
+.users-list {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    .user-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px 0;
+        border-bottom: 1px solid #E0E0E0;
+    }
+
+    .add-friend-btn {
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: 16px;
+        color: #00a000;
+    }
 }
