--- a/src/app/features/user/user.component.scss
+++ b/src/app/features/user/user.component.scss
@@ -16,16 +16,30 @@
         flex-direction: column;
         gap: 8px;
 
-        input {
-            padding: 8px;
-            border: 1px solid #E0E0E0;
-            border-radius: 8px;
-        }
+        .field {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
 
-        ::placeholder {
-            color: #C4C4C4;
-            font-style: italic;
+            label {
+                text-align: left;
+                font-size: 12px;
+                color: #6B6B6B;
+                padding-left: 4px;
+            }
+    
+            input {
+                padding: 8px;
+                border: 1px solid #E0E0E0;
+                border-radius: 8px;
+            }
+    
+            ::placeholder {
+                color: #C4C4C4;
+                font-style: italic;
+            }
         }
+        
 
         button {
             border: none;
