--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: #F3F5F7;
+    overflow: hidden;
 
     p {
-        font-size: 18px;
-        line-height: 26px;
+        font-size: 14px;
+        line-height: 20px;
     }
 }
